--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
   },
   "author": "",
   "license": "ISC",
+  "browsersList": [
+    "> 1%"
+  ],
   "devDependencies": {
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "babel-loader": "^9.1.3",
+    "core-js": "^3.33.0",
     "eslint": "^8.49.0",
-    "json-server": "^0.17.4"
+    "json-server": "^0.17.4",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "nodelist-foreach-polyfill": "^1.2.0"
   }
 }
